@@ -1,0 +1,19 @@
+================
+$project package
+================
+
+.. contents::
+
+What is $project ?
+==================
+
+Explain here what is the purpose of $project.
+
+How to use $project ?
+=====================
+
+Explain here how the package is used. Points to doctests here !
+
+
+
+
