@@ -1,0 +1,8 @@
+[buildout]
+develop = .
+parts = test
+
+[test]
+recipe = zc.recipe.testrunner
+eggs = $namespace_package.$namespace_package2.$package [test]
+
